--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
       </div>
 
       <div class="conteudo">
+        <a name="inicio"></a>
+
         <div class="navigation">
           <ul>
             <li><a href="#experiencia">Experiência</a></li>
@@ -99,10 +101,18 @@
         </div>
 
         <h3 class="titulo titulo--fonte" id="contato">Contato</h3>
-        <p><i class="fas fa-phone-alt pr4"></i> +55 12 99100-0999</p>
-        <p><i class="fab fa-whatsapp pr4"></i> +55 12 99100-0999</p>
-        <p><i class="far fa-envelope-open pr4"></i> chef@roger.br</p>
-        <p><i class="fas fa-globe pr4"></i> https://roger.com.br</p>
+        <p class="fonte--media">
+          <i class="fas fa-phone-alt pr4"></i> +55 12 99100-0999
+        </p>
+        <p class="fonte--media">
+          <i class="fab fa-whatsapp pr4"></i> +55 12 99100-0999
+        </p>
+        <p class="fonte--media">
+          <i class="far fa-envelope-open pr4"></i> chef@roger.br
+        </p>
+        <p class="fonte--media">
+          <i class="fas fa-globe pr4"></i> https://roger.com.br
+        </p>
 
         <h3
           class="titulo titulo--fonte"
@@ -130,6 +140,23 @@
             <progress id="progress-bar-4" value="9" max="10"></progress>
           </p>
         </div>
+      </div>
+
+      <div class="btn-inicio">
+        <a href="#inicio">
+          <i class="fa fa-angle-up"></i>
+        </a>
+      </div>
+
+      <div class="footer">
+        <h4>© Roger Camargo | Dev Pro | 2022</h4>
+        <p>
+          <i class="pa2 fab fa-telegram-plane"></i>
+          <i class="pa2 fab fa-linkedin"></i>
+          <i class="pa2 fab fa-slideshare"></i>
+          <i class="pa2 fab fa-github-alt"></i>
+          <i class="pa2 fab fa-book"></i>
+        </p>
       </div>
     </div>
   </body>
