--- a/index.html
+++ b/index.html
@@ -50,35 +50,35 @@
         </div>
 
         <img class="avatar" src="img/RogerAvatar2022-6.png" alt="" />
-        <p class="fonte--media">
+        <p class="fonte--pequena">
           Hey, sou <span>Roger</span> e eu acredito muito na alimentação
           saudável para uma melhor qualidade de vida! Comecei a cozinhar com 18
           anos, quando saí de casa para fazer faculdade em outra cidade.
         </p>
 
-        <p class="fonte--media">
+        <p class="fonte--pequena">
           Sou conhecido na minha famĺia por não seguir as receitas e criar
           minhas versões, as quais na maioria das vezes são um desastre total.
         </p>
 
-        <p class="fonte--media">
+        <p class="fonte--pequena">
           Brincadeiras a parte, também tenho adaptações de receitas que são
           sucesso, um exemplo é o pãodemia, uma forma rápida de fazer um
           delicioso pão pita para estes tempos onde temos que sair o mínimo
           possível de casa.
         </p>
 
-        <h3 class="titulo" id="experiencia">Experiência</h3>
+        <h3 class="titulo titulo--fonte" id="experiencia">Experiência</h3>
         <ul>
-          <li class="fonte--media">
+          <li class="fonte--pequena">
             2016 até 2022: Uma virada para pratos orientais, principalmente
             culinária Tailandesa
           </li>
-          <li class="fonte--media">
+          <li class="fonte--pequena">
             2011 até 2015: Especializado na culinária Italiana e pratos do Norte
             do Brasil
           </li>
-          <li class="fonte--media">
+          <li class="fonte--pequena">
             2000 até 2010: Pratos típicos da culinária brasileira
           </li>
         </ul>
